# mbn-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
mbn/: Cargo.toml  README.md
mbn-cli/: Cargo.toml
mbn-cli/src/: algo.rs  main.rs
mbn/src/: byte_read.rs  error.rs  hash_table_segment.rs  header.rs  lib.rs  metadata.rs
