[workspace]
members = ["mbn", "mbn-cli"]
resolver = "2"

[workspace.package]
authors = ["Nichts Hsu <NichtsVonChaos@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/mbn"
repository = "https://github.com/NichtsHsu/mbn-rs"
categories = ["Parser implementations"]
