[package]
name = "mbn-cli"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
description = "MBN file parse CLI tool"

[[bin]]
name = "mbn-cli"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mbn = { path = "../mbn", version = "0.3.0" }
x509-parser = "0.16"
asn1-rs = "0.6"
